# PoleSudBot

./: .gitignore  bot.py  manage.toml  nbm.py  plugins.txt  pyproject.toml
nbm_core/: __init__.py  config.py  exceptions.py  git.py  log.py  process.py  project.py  state.py
