# =================================================================
# 构建系统 (Build System)
# 使用 hatchling 作为现代、标准的构建后端，与 uv 配合良好。
# =================================================================
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# =================================================================
# 项目核心元数据 (PEP 621)
# 这是项目的“通用身份证”，任何现代构建工具都能理解。
# =================================================================
[project]
name = "zhenxun_bot"
version = "0.2.4"
description = "基于 Nonebot2 和 go-cqhttp 开发，以 postgresql 作为数据库，非常可爱的绪山真寻bot"
requires-python = ">=3.10, <4.0"
license = { text = "AGPL" }
authors = [
    { name = "HibiKier", email = "775757368@qq.com" },
]

# 核心依赖 (Core Dependencies)
dependencies = [
    "playwright>=1.41.1,<2.0.0",
    "nonebot-adapter-onebot>=2.3.1,<3.0.0",
    "nonebot-plugin-apscheduler>=0.5,<0.6",
    "tortoise-orm>=0.20.0,<0.21.0",
    "cattrs>=23.2.3,<24.0.0",
    "ruamel-yaml>=0.18.5,<0.19.0",
    "strenum>=0.4.15,<0.5.0",
    "nonebot-plugin-session>=0.2.3,<0.3.0",
    "ujson>=5.9.0,<6.0.0",
    "nb-cli>=1.3.0,<2.0.0",
    "nonebot2[fastapi]>=2.3.3,<3.0.0",
    "pillow>=11.0.0",
    "retrying>=1.3.4,<2.0.0",
    "aiofiles>=24.1.0",
    "nonebot-plugin-htmlrender>=0.6.0,<1.0.0",
    "pypinyin>=0.55.0,",
    "beautifulsoup4>=4.12.3,<5.0.0",
    "lxml>=5.1.0,<6.0.0",
    "psutil>=5.9.8,<6.0.0",
    "feedparser>=6.0.11,<7.0.0",
    "imagehash>=4.3.1,<5.0.0",
    "cn2an>=0.5.22,<0.6.0",
    "dateparser>=1.2.0,<2.0.0",
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "python-multipart>=0.0.9,<0.1.0",
    "aiocache[redis]>=0.12.3,<0.13.0",
    "py-cpuinfo>=9.0.0,<10.0.0",
    "nonebot-plugin-alconna>=0.59.0",
    "tenacity>=9.0.0,<10.0.0",
    "nonebot-plugin-uninfo>0.4.1",
    "nonebot-plugin-waiter>=0.8.1,<0.9.0",
    "multidict>=6.0.0,!=6.3.2",
    "alibabacloud-devops20210625>=5.0.2,<6.0.0",
]

# 可选依赖 (Optional Dependencies)
# 统一管理 'extras' 和开发依赖
[project.optional-dependencies]
redis = ["redis>=5"]
postgresql = ["asyncpg>=0.20.0"]
dev = [
    "nonebug>=0.4,<0.5",
    "pytest-cov>=5.0.0,<6.0.0",
    "pytest-mock>=3.6.1,<4.0.0",
    "pytest-asyncio>=0.25,<0.26",
    "pytest-xdist>=3.3.1,<4.0.0",
    "respx>=0.21.1,<0.22.0",
    "ruff>=0.8.0,<0.9.0",
    "pre-commit>=4.0.0,<5.0.0",
]

[tool.hatch.build]
packages = ["zhenxun"]

[tool.hatch.metadata]
# 允许项目的依赖列表中包含直接引用（如本地文件路径）
# 这对于我们这种基于 monorepo 和本地可编辑包的开发流程是必需的
allow-direct-references = true



# =================================================================
# uv 专属配置 (uv-specific Configuration)
# =================================================================
[tool.uv.pip]
# 将 Poetry 的私有源配置移到 uv 的标准配置位置
index-url = "https://mirrors.aliyun.com/pypi/simple/"

# =================================================================
# 其他工具配置 (Other Tool Configurations)
# 这些配置与项目打包元数据无关，保持原样。
# =================================================================
[tool.nonebot]
plugins = [
    "nonebot_plugin_apscheduler",
    "nonebot_plugin_session",
    "nonebot_plugin_htmlrender",
    "nonebot_plugin_alconna",
]
plugin_dirs = ["zhenxun/services", "zhenxun/builtin_plugins", "zhenxun/plugins"]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
select = [
    "F", "W", "E", "I", "UP", "ASYNC", "C4", "T10",
    "T20", "PYI", "PT", "Q", "TID", "RUF",
]
ignore = [
    "E402", "UP037", "RUF001", "RUF002", "RUF003", "TID252",
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["zhenxun", "tests/*"]
extra-standard-library = ["typing_extensions"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.pyright]
pythonVersion = "3.10"
pythonPlatform = "All"
defineConstant = { PYDANTIC_V2 = true }
executionEnvironments = [
    { root = "./tests", extraPaths = ["./"] },
    { root = "./" },
]
typeCheckingMode = "standard"
reportShadowedImports = false
disableBytesTypePromotions = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
